Fixed js and css sources

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>sirAccordion</title>
-  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/SirIdeas/sirAccordion/master/dist/styles/sir-accordion.css"/>
   <style type="text/css">
     html{
       height: 100%;
@@ -40,8 +40,8 @@
       </div>
     </div>
   </div>
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../dist/scripts/sir-accordion.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+  <script src="https://raw.githubusercontent.com/SirIdeas/sirAccordion/master/dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
