Fix cdn for raws

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>sirAccordion</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/SirIdeas/sirAccordion/master/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/master/dist/styles/sir-accordion.css"/>
   <style type="text/css">
     html{
       height: 100%;
@@ -41,7 +41,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-  <script src="https://raw.githubusercontent.com/SirIdeas/sirAccordion/master/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/master/dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
