--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular/angular.min.js"></script>
   <script src="../dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
