--- a/example/index.html
+++ b/example/index.html
@@ -27,20 +27,30 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-xs-12">
+        <p>
+          If you set the autoCollapse to false you can use this cool buttons
+        </p>
+        <p>
+          <button ng-click="expandAll()" class="btn btn-primary">Expand all</button>
+          <button ng-click="collapseAll()" class="btn btn-primary">Collapse all</button>
+        </p>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div sir-ng-accordion collection="accordionArray" config="accordionConfig"></div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <blockquote>
           <p>
-            <button ng-click="expandAll()" class="button">Expand all</button>
-            <button ng-click="collapseAll()" class="button">Collapse all</button>
+            Awesome dynamic, recursive, customizable and multilevel <strong>Accordion Menu</strong> for <strong>AngurlarJS</strong>, that builds up from a JSON object and an optional configuration object. <strong>You can download the project for a live demo in the example folder (don't forget to bower install dependencies)</strong> and for better understanding.
           </p>
           <p>
-            Directiva de AngularJS que construye un menú en acordéon a partir de un objeto JSON, con un scope de configuración opcional.
+            <strong>No jQuery needed</strong>
           </p>
           <p>
-            No depende de jQuery
+            Go to the <a href="https://github.com/SirIdeas/sirAccordion">Project page</a> for a how to use
           </p>
         </blockquote>
       </div>
