--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <style type="text/css">
     html{
       height: 100%;
