--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.0/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.2/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="styles.css">
   <style type="text/css">
     html{
       height: 100%;
@@ -57,7 +58,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.0/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.2/dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
