--- a/example/index.html
+++ b/example/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
   <script src="../bower_components/fastclick/lib/fastclick.js"></script>
-  <script src="../bower_components/angular/angular.min.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
   <script src="../dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
