--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6">
-        <div sir-ng-accordion collection="accordionArray" config="accordionConfig"></div>
+        <div sir-accordion collection="accordionArray" config="accordionConfig"></div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <blockquote>
