--- a/example/index.html
+++ b/example/index.html
@@ -59,6 +59,7 @@
   </div>
   <script src="../bower_components/fastclick/lib/fastclick.js"></script>
   <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/velocity/velocity.min.js"></script>
   <script src="../dist/scripts/sir-accordion.js"></script>
   <script src="app.js"></script>
 </body>
