Toggle autoCollapse experimental

--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,7 @@
         <p>
           <button ng-click="expandAll()" class="btn btn-primary">Expand all</button>
           <button ng-click="collapseAll()" class="btn btn-primary">Collapse all</button>
+          <button ng-click="toggleAutoCollapse()" class="btn btn-primary">toggle autoCollapse</button>
         </p>
       </div>
     </div>
