Improved expandById algoritm
appears to work now for all scenarios

--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="col-xs-7 col-sm-4 no-padding-left">
             <button ng-click="expandAll()" class="btn btn-primary" ng-class="{'disabled': accordionConfig.autoCollapse}">Expand all</button>
-            <button ng-click="collapseAll()" class="btn btn-primary" ng-class="{'disabled': accordionConfig.autoCollapse}">Collapse all</button>
+            <button ng-click="collapseAll()" class="btn btn-primary">Collapse all</button>
           </div>
           <div class="col-xs-12 col-sm-5">
             <button ng-click="toggleAutoCollapse()" class="btn btn-primary" ng-cloak>toggle autoCollapse: {{accordionConfig.autoCollapse}}</button>
