Fix bottomContent not showing
-Fixed Bottom content not showing
-Changed pre to before and post to after

--- a/example/index.html
+++ b/example/index.html
@@ -55,6 +55,9 @@
             <strong>No jQuery needed</strong>
           </p>
           <p>
+            You could set <strong>pre/post</strong> <strong>topContent/bottomContent</strong> in the accordion config object to set a scroll back to top buttom (or whatever you like), given that you only need to set the value once and it will be in all the contents of the accordion.
+          </p>
+          <p>
             Go to the <a href="https://github.com/SirIdeas/sirAccordion">Project page</a> for a how to use
           </p>
         </blockquote>
