--- a/index.html
+++ b/index.html
@@ -6,19 +6,8 @@
   <meta name="description" content="">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.2/dist/styles/sir-accordion.css"/>
-  <link rel="stylesheet" href="styles.css">
-  <style type="text/css">
-    html{
-      height: 100%;
-    }
-    body{
-      height: 100%;
-    }
-    .container{
-      min-height: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.0.0/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body ng-app="sirAccordion" ng-controller="Principal">
   <div class="container">
@@ -29,18 +18,33 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <p>
-          If you set the autoCollapse to false you can use this cool buttons
-        </p>
-        <p>
-          <button ng-click="expandAll()" class="btn btn-primary">Expand all</button>
-          <button ng-click="collapseAll()" class="btn btn-primary">Collapse all</button>
-        </p>
+        <p>To expand a content given a coord e.g: 1-1, put the coord in the input and click the expand buttom</p>
+        <div class="row">
+          <div class="form-group col-xs-5 col-sm-3">
+            <form ng-submit="expandByCoord()">
+              <div class="input-group">
+                <input type="text" class="form-control" ng-model="coord" placeholder="Coordinate">
+                <input type="submit" style="display:none">
+                <div class="input-group-addon clickable" ng-click="expandByCoord()">
+                  <span class="glyphicon glyphicon-collapse-down"></span>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-xs-7 col-sm-4 no-padding-left">
+            <button ng-click="expandAll()" class="btn btn-primary" ng-class="{'disabled': accordionConfig.autoCollapse}">Expand all</button>
+            <button ng-click="collapseAll()" class="btn btn-primary">Collapse all</button>
+          </div>
+          <div class="col-xs-12 col-sm-5">
+            <button ng-click="toggleAutoCollapse()" class="btn btn-primary" ng-cloak>toggle autoCollapse: {{accordionConfig.autoCollapse}}</button>
+          </div>
+        </div>
+        <br>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6">
-        <div sir-ng-accordion collection="accordionArray" config="accordionConfig"></div>
+        <div sir-accordion collection="accordionArray" config="accordionConfig"></div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <blockquote>
@@ -51,6 +55,9 @@
             <strong>No jQuery needed</strong>
           </p>
           <p>
+            You could set <strong>pre/post</strong> <strong>topContent/bottomContent</strong> in the accordion config object to set a scroll back to top buttom (or whatever you like), given that you only need to set the value once and it will be in all the contents of the accordion.
+          </p>
+          <p>
             Go to the <a href="https://github.com/SirIdeas/sirAccordion">Project page</a> for a how to use
           </p>
         </blockquote>
@@ -58,7 +65,9 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v0.9.2/dist/scripts/sir-accordion.js"></script>
+  <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.0.0/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
