New attr to accordionConfig, New class to accordion-content element
Now you can add html attrs to the accordion headers, and now check when
clicking a header if the content is expanding or not with the
completeExpanded class in the accordion-content element

--- a/example/accordionContent/top/1-2-4.html
+++ b/example/accordionContent/top/1-2-4.html
@@ -1,1 +1,1 @@
-<p>More of this on the subCollection section.</p><p><button ng-click="expandByCoord(1)" class="btn btn-primary">Click for more info!</button></p>
+<p>More of this on the subCollection section.</p><p><button ng-click="expandByCoord('1-3')" class="btn btn-primary">Click for more info!</button></p>
