--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.1.1/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/2f088a28/dist/styles/sir-accordion.css"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body ng-app="sirAccordion" ng-controller="Principal">
@@ -68,7 +68,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
   <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
-  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.1.1/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/2f088a28/dist/scripts/sir-accordion.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="app.js"></script>
 </body>
