--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-  
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="../dist/styles/sir-accordion.css"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
@@ -50,7 +50,7 @@
         <div class="hidden-xs col-sm-6">
           <blockquote>
             <p>
-              Awesome dynamic, recursive, customizable and multilevel <strong>Accordion Menu</strong> for <strong>AngurlarJS</strong>, that builds up from a JSON object and an optional configuration object. <strong>You can download the project for a live demo in the example folder (don't forget to bower install dependencies)</strong> and for better understanding.
+              Dynamic, customizable and multilevel **Accordion Menu** for **AngurlarJS**. Builds up from a **JSON object** and an optional configuration object.
             </p>
             <p>
               <strong>No jQuery needed</strong>
@@ -66,7 +66,6 @@
       </div>
     </div>
   </div>
-  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
   <script src="../bower_components/fastclick/lib/fastclick.js"></script>
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/velocity/velocity.min.js"></script>
