--- a/example/index.html
+++ b/example/index.html
@@ -45,7 +45,7 @@
     <div class="content-wrap">
       <div class="row full-height">
         <div id="scroller" class="col-xs-12 col-sm-6 full-height scrollable">
-            <div id="SAC1" sir-accordion collection="accordionArray" config="sirAccordion.config"></div>
+            <div sir-accordion collection="{{sirAccordion.collection}}" config="sirAccordion.config"></div>
         </div>
         <div class="hidden-xs col-sm-6">
           <blockquote>
