--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="content-wrap">
       <div class="row full-height">
         <div class="col-xs-12 col-sm-6 full-height scrollable">
-            <div sir-accordion collection="accordionArray" config="accordionConfig"></div>
+            <div sir-accordion collection="{{sirAccordion.collection}}" config="sirAccordion.config"></div>
         </div>
         <div class="hidden-xs col-sm-6">
           <blockquote>
@@ -68,7 +68,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
   <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
-  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.2.6/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.3.0/dist/scripts/sir-accordion.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="app.js"></script>
 </body>
