--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/2f088a28/dist/styles/sir-accordion.css"/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.4.1/dist/styles/sir-accordion.css"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body ng-app="sirAccordion" ng-controller="Principal">
@@ -45,7 +45,7 @@
     <div class="content-wrap">
       <div class="row full-height">
         <div class="col-xs-12 col-sm-6 full-height scrollable">
-            <div sir-accordion collection="{{sirAccordion.collection}}" config="sirAccordion.config"></div>
+            <div sir-accordion collection="sirAccordion.collection" config="sirAccordion.config"></div>
         </div>
         <div class="hidden-xs col-sm-6">
           <button ng-click="toggleAnimation()" class="btn btn-primary" ng-cloak>Toggle animation: {{sirAccordion.config.animDur? 'on' : 'off'}}</button>
@@ -70,7 +70,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
   <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
-  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/1.3.0/dist/scripts/sir-accordion.js"></script>
+  <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.4.1/dist/scripts/sir-accordion.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="app.js"></script>
 </body>
