--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-  <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.1/velocity.js"></script>
   <script src="https://cdn.rawgit.com/SirIdeas/sirAccordion/v1.4.1/dist/scripts/sir-accordion.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="app.js"></script>
